# opencv-develop

./: README.md
VideoCapture/: CMakeLists.txt  main.cpp
